--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chameleon-design",
-  "homepage": "https://chameleon-design.github.io", 
+  "homepage": " https://chameleon-design.github.io/Chameleon-Design/", 
   "version": "0.1.0",
   "private": true,
   "dependencies": {
