--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chameleon-design",
-  "homepage": " https://chameleon-design.github.io/Chameleon-Design/", 
+  "homepage": " https://chameleon-design.github.io/Chameleon-Design/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,12 +10,13 @@
     "gh-pages": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
